[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=3]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=4]
[ext_resource path="res://scripts/Test.gd" type="Script" id=5]

[node name="Test" type="Node2D"]
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 4 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_clip_content = true
script = ExtResource( 3 )

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 2 )]
anchor_left = 0.001
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 0.056
margin_left = -0.00999999
margin_top = -0.172
margin_right = 1.0
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 1 )]
margin_left = 0.639954
margin_top = -0.28
margin_right = 1.00995
margin_bottom = -0.306

[node name="Label" type="Label" parent="PanelContainer/MainPanel"]
anchor_left = 0.056
anchor_top = 0.097
anchor_right = 0.5
anchor_bottom = 0.206
margin_left = 0.439999
margin_top = 0.157997
margin_bottom = 0.283989
text = "Test (WIP) :"
align = 1
valign = 1

[node name="Inputs" type="Panel" parent="PanelContainer/MainPanel"]
anchor_left = 0.001
anchor_top = 0.193
anchor_right = 0.5
anchor_bottom = 0.998
margin_left = -0.00999999
margin_top = -0.0979996
margin_bottom = 0.171997

[node name="Btn1" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.111
anchor_top = 0.017
anchor_right = 0.369
anchor_bottom = 0.059
margin_left = 0.0559959
margin_top = -0.0240002
margin_right = 0.0239868
margin_bottom = 0.151999
text = "Test Alert"

[node name="Btn2" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.413
anchor_top = 0.017
anchor_right = 0.671
anchor_bottom = 0.059
margin_left = -0.152008
margin_top = -0.0240002
margin_right = -0.18399
margin_bottom = 0.151999
text = "Test Shell"

[node name="Btn3" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.714
anchor_top = 0.017
anchor_right = 0.972
anchor_bottom = 0.059
margin_left = 0.143982
margin_top = -0.0240002
margin_right = 0.111969
margin_bottom = 0.151999
text = "Activer Service PGSQL"

[node name="Btn4" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.111
anchor_top = 0.085
anchor_right = 0.365
anchor_bottom = 0.127
margin_left = 0.0559959
margin_top = -0.119999
margin_right = 0.0399933
margin_bottom = 0.0559998
text = "Taille FenÃªtre"

[node name="Btn5" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.413
anchor_top = 0.085
anchor_right = 0.667
anchor_bottom = 0.127
margin_left = -0.152008
margin_top = -0.119999
margin_right = -0.16803
margin_bottom = 0.0559998
text = "Trouver PGSQL"

[connection signal="pressed" from="PanelContainer/MainPanel/Inputs/Btn1" to="." method="_on_Btn1_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/Inputs/Btn2" to="." method="_on_Btn2_pressed"]
[connection signal="pressed" from="PanelContainer/MainPanel/Inputs/Btn3" to="." method="_on_Btn3_pressed"]
